---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: ???
  Changes:
    - Efficiency modules disabled for sulfur mines
    - Ground borer now needs aromatics to mine zinc
---------------------------------------------------------------------------------------------------
Version: 3.0.21
Date: ???
  Changes:
    - Remade tech tree with autotech 2.0. Science pack cost comparasion:
    - automation: n/a -> trigger
    - py1: 100 -> 100
    - logi: 360 -> 300
    - py2: 1300 -> 800
    - chem: 2000 -> 1400
    - py3: 2250 -> 1750
    - prod: 1750 -> 2250
    - py4: 2250 -> 3000
    - utility: 1500 -> 3300
    - space: 1000 -> 3600
    - phyrric: 3000 -> 8000
    - Anthracene + Hydrogen -> Gasoline recipe can no longer be used in automation science.
    - Ironic upgrader MK01 unlock moved to oil machines MK01 (previously was in syngas technology).
    - Added Dutch locale
    - Removed various unused casting recipe prototypes from the game. Resolves https://github.com/pyanodon/pybugreports/issues/1128
---------------------------------------------------------------------------------------------------
Version: 3.0.20
Date: 2025-08-12
  Changes:
    - Anthracene + Hydrogen -> Gasoline recipe can now be used in automation science. Resolves https://github.com/pyanodon/pybugreports/issues/1066
    - Fixed Bulk Inserter 1 and 2 technologies not having the correct prerequesites and dependants. Resolves https://github.com/pyanodon/pybugreports/issues/1086 and https://github.com/pyanodon/pybugreports/issues/1099
---------------------------------------------------------------------------------------------------
Version: 3.0.19
Date: 2025-07-20
  Changes:
    - Aromatic plastic recipe now fixed with medium py
---------------------------------------------------------------------------------------------------
Version: 3.0.18
Date: 2025-06-29
  Changes: