@@ -126,8 +126,6 @@ tholin-atm-mk01=Tholin Extraktor MK01
 tholin-atm-mk02=Tholin Extraktor MK02
 tholin-atm-mk03=Tholin Extraktor MK03
 tholin-atm-mk04=Tholin Extraktor MK04
-py-tank-9000=PyTank 9000
-py-tank-10000=PyTank 10000
 rhe=Regenerativer Wärmetauscher
 oil-derrick-mk01=Kleiner Öl Derrick
 oil-derrick-mk02=Mittlerer Öl Derrick
