@@ -213,10 +213,6 @@ tholin-atm-mk01=Atmosferische tholine-extractor MK 01
 tholin-atm-mk02=Atmosferische tholine-extractor MK 02
 tholin-atm-mk03=Atmosferische tholine-extractor MK 03
 tholin-atm-mk04=Atmosferische tholine-extractor MK 04
-py-tank-9000=PyTank (90 kL)
-py-tank-10000=PyTank (100 kL)
-py-tank-9000-adjust=PyTank (180 kL)
-py-tank-10000-adjust=PyTank (250 kL)
 rhe=Regenerator
 oil-derrick-mk01=Kleine olieboortoren MK 01
 oil-derrick-mk02=Gemiddelde olieboortoren MK 02
