@@ -208,10 +208,6 @@ tholin-atm-mk01=Атмосферный экстрактор толина МК1
 tholin-atm-mk02=Атмосферный экстрактор толина МК2
 tholin-atm-mk03=Атмосферный экстрактор толина МК3
 tholin-atm-mk04=Атмосферный экстрактор толина МК4
-py-tank-9000=Цистерна (90 м³)
-py-tank-10000=Цистерна (100 м³)
-py-tank-9000-adjust=Цистерна (180 м³)
-py-tank-10000-adjust=Цистерна (250 м³)
 rhe=Регенеративный теплообменник
 oil-derrick-mk01=Малая нефтяная вышка МК1
 oil-derrick-mk02=Средняя нефтяная вышка МК2
