@@ -155,10 +155,6 @@ tholin-atm-mk01=Aтмосферний екстрактор толінів 1
 tholin-atm-mk02=Aтмосферний екстрактор толінів 2
 tholin-atm-mk03=Aтмосферний екстрактор толінів 3
 tholin-atm-mk04=Aтмосферний екстрактор толінів 4
-py-tank-9000=Резервуар (90 м³)
-py-tank-10000=Резервуар (100 м³)
-py-tank-9000-adjust=Резервуар (180 м³)
-py-tank-10000-adjust=Резервуар (250 м³)
 rhe=Регенеративний теплообмінник
 oil-derrick-mk01=Мала нафтова вишка 1
 oil-derrick-mk02=Середня нафтова вишка 2
