@@ -4,6 +4,7 @@ Date: ???
   Changes:
     - Efficiency modules disabled for sulfur mines
     - Ground borer now needs aromatics to mine zinc
+    - The 180k and 250k fluid tanks are no longer located within pypetrolemhandling. All tanks are now stored inside pyindustry.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.21
 Date: ???
